--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.11",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "jose": "^6.0.11",
@@ -17,6 +18,7 @@
     "next": "15.3.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
+    "react-aria": "^3.41.1",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
