--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-aria": "^3.41.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
