--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroui/react": "^2.7.11",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
