--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@heroui/accordion": "^2.2.20",
     "@heroui/react": "^2.7.11",
+    "@heroui/system": "^2.4.19",
+    "@heroui/theme": "^2.4.19",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.23.6",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "prisma": "^6.11.1",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-aria": "^3.41.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
