bot chat config end

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-aria": "^3.41.1",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
